--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "External/AngryWasp.Build"]
 	path = External/AngryWasp.Build
-	url = https://github.com/angrywasp/AngryWasp.Build
+	url = git@git.angrywasp.net.au:angrywasp/Build.git
