--- a/Src/AngryWasp.Helpers/AngryWasp.Helpers.csproj
+++ b/Src/AngryWasp.Helpers/AngryWasp.Helpers.csproj
@@ -9,5 +9,6 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+        <PackageReference Include="Portable.BouncyCastle" Version="1.9.0"/>
     </ItemGroup>
 </Project>
